lib/eigen/libowl_eigen.h

  /**************************** SparseMatrix_D ****************************/

  struct c_spmat_d {};
  struct c_spmat_d* c_eigen_spmat_d_min2(struct c_spmat_d *m0, struct c_spmat_d *m1);
  struct c_spmat_d* c_eigen_spmat_d_max2(struct c_spmat_d *m0, struct c_spmat_d *m1);
  double c_eigen_spmat_d_sum(struct c_spmat_d *m);
  double c_eigen_spmat_d_min(struct c_spmat_d *m);
  double c_eigen_spmat_d_max(struct c_spmat_d *m);
  struct c_spmat_d* c_eigen_spmat_d_abs(struct c_spmat_d *m);
  struct c_spmat_d* c_eigen_spmat_d_neg(struct c_spmat_d *m);
  struct c_spmat_d* c_eigen_spmat_d_sqrt(struct c_spmat_d *m);
  void c_eigen_spmat_d_print(struct c_spmat_d *m);
  /**************************** SparseMatrix_C ****************************/

  struct c_spmat_c {};
  struct c_spmat_c* c_eigen_spmat_c_new(INDEX rows, INDEX cols);
  void c_eigen_spmat_c_delete(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_eye(INDEX m);
  INDEX c_eigen_spmat_c_rows(struct c_spmat_c *m);
  INDEX c_eigen_spmat_c_cols(struct c_spmat_c *m);
  INDEX c_eigen_spmat_c_nnz(struct c_spmat_c *m);
  CELT_C c_eigen_spmat_c_get(struct c_spmat_c *m, INDEX i, INDEX j);
  void c_eigen_spmat_c_set(struct c_spmat_c *m, INDEX i, INDEX j, CELT_C x);
  void c_eigen_spmat_c_reset(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_compressed(struct c_spmat_c *m);
  void c_eigen_spmat_c_compress(struct c_spmat_c *m);
  void c_eigen_spmat_c_uncompress(struct c_spmat_c *m);
  void c_eigen_spmat_c_reshape(struct c_spmat_c *m, INDEX rows, INDEX cols);
  void c_eigen_spmat_c_prune(struct c_spmat_c *m, CELT_C ref, float eps);
  CELT_C* c_eigen_spmat_c_valueptr(struct c_spmat_c *m, INDEX *l);
  INDEX* c_eigen_spmat_c_innerindexptr(struct c_spmat_c *m);
  INDEX* c_eigen_spmat_c_outerindexptr(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_clone(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_row(struct c_spmat_c *m, INDEX i);
  struct c_spmat_c* c_eigen_spmat_c_col(struct c_spmat_c *m, INDEX i);
  struct c_spmat_c* c_eigen_spmat_c_transpose(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_adjoint(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_diagonal(struct c_spmat_c *m);
  CELT_C c_eigen_spmat_c_trace(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_zero(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_positive(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_negative(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_nonpositive(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_nonnegative(struct c_spmat_c *m);
  int c_eigen_spmat_c_is_equal(struct c_spmat_c *m0, struct c_spmat_c *m1);
  int c_eigen_spmat_c_is_unequal(struct c_spmat_c *m0, struct c_spmat_c *m1);
  int c_eigen_spmat_c_is_greater(struct c_spmat_c *m0, struct c_spmat_c *m1);
  int c_eigen_spmat_c_is_smaller(struct c_spmat_c *m0, struct c_spmat_c *m1);
  int c_eigen_spmat_c_equal_or_greater(struct c_spmat_c *m0, struct c_spmat_c *m1);
  int c_eigen_spmat_c_equal_or_smaller(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_add(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_sub(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_mul(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_div(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_dot(struct c_spmat_c *m0, struct c_spmat_c *m1);
  struct c_spmat_c* c_eigen_spmat_c_add_scalar(struct c_spmat_c *m, CELT_C a);
  struct c_spmat_c* c_eigen_spmat_c_sub_scalar(struct c_spmat_c *m, CELT_C a);
  struct c_spmat_c* c_eigen_spmat_c_mul_scalar(struct c_spmat_c *m, CELT_C a);
  struct c_spmat_c* c_eigen_spmat_c_div_scalar(struct c_spmat_c *m, CELT_C a);
  CELT_C c_eigen_spmat_c_sum(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_neg(struct c_spmat_c *m);
  struct c_spmat_c* c_eigen_spmat_c_sqrt(struct c_spmat_c *m);
  void c_eigen_spmat_c_print(struct c_spmat_c *m);